[package]
name = "test_hyper"
version = "0.1.0"
authors = ["Brian Mancini <bmancini@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
hyper = "0.13"
sqlx = { version = "0.3", default-features = false, features = [ "runtime-tokio", "mysql" ] }
futures = "0.3"